tests/NormalTests/paczka1/small_fuzzy/72936771.err
Error in line 3: sJ08 A209 81,3
Error in line 2: 1snGGEc S749 59,7
Error in line 7: 1snGGEc A751 86,8
